types menu fixed on mobile view

--- a/src/components/pages/Detail.css
+++ b/src/components/pages/Detail.css
@@ -18,9 +18,6 @@
     max-width: 50%;
     max-height: 100%;
 }
-.detailBack{
-    transform: scaleX(-1);
-}
 .detailFront, .detailBack{
     animation: float 3s infinite alternate;
     max-height: 5rem;
